# kair-repo

./: .gitignore  .gitmodules  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.db  Dockerfile.server  README.md  Strategy.md  cli.py  code-guide.md  crawler.py  create_db.sql  dblp_parser.diff  docker-compose.yml  enrichment.md  frontier_queue.py  generate_detection_info.py  generate_doc_info.py  generate_source_info.py  generate_table_info.py  graph_db.py  grobid_config.json  index.html  load.py  next-steps.md  package-lock.json  package.json  pnpm-lock.yaml  process_pdf.py  pyproject.toml  requirements.txt  results.md  route_query.py  sample.env  search.py  server.py  states.md  timescaledb.sh  tsconfig.json
airfoundry_domain/: protein_to_mrna.py
backend/: enrichment_daemon.py  graph_db.py
crawl/: arxiv.py  crawler_queue.py  duckduckgo.py  pennsieve.py  semscholar.py  web_fetch.py
deprecated/: server.py
enrichment/: core_ops.py  iterative_enrichment.py  langchain_ops.py  llms.py  seed_lists.py
entities/: entity_content.py  generate_doc_info.py  generate_people_info.py
files/: arxiv.py  parser.py  pdfs.py  tables.py  text.py
kair-client/: .dockerignore  Dockerfile.frontend  config.ts  package-lock.json  package.json  pnpm-lock.yaml
prompts/: llm_prompts.py  prompt_for_documents.py  prompt_for_tables.py  prompt_from_items.py  restructure.py
qa/: answer_question.py  qa_tasks.py
scripts/: local-deploy-client.sh  local-deploy-server.sh
server/: Dockerfile.server  README.md  requirements.txt
src/: App.tsx  main.tsx
starting_points/: people.yaml
(+206 files in other folders)
