[project]
name = "enrichment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aryn-sdk>=0.2.1",
    "bs4>=0.0.2",
    "faiss-cpu>=1.10.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "langchain>=0.3.23",
    "langchain-ai>=0.1.1",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.12",
    "openai>=1.70.0",
    "pgvector>=0.4.0",
    "psycopg2>=2.9.10",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
